--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Project 106</title>
 
